tests/bad/value_enums/shared_field_enum_compare.oc
/// fail:  Expected enum variant, got: Variable

// Old error
/// fail: Operator `Equals` does not support non-trivial enum `Foo`


enum Foo {
    x: i32
    y: str

    FooA
    FooB
    FooC
}

def main() {
    let x: Foo
    if (x == x) {
        println("x == x")
    } else {
        println("x != x")
    }
}